# freeciv-python

./: .gitignore  CMakeLists.txt  In The Beggining.md  README  README.md  README.style  setup.py  template.py  template2.py  template_.py
cfg/: bp-gameonly.cfg  bp-identity.cfg  bp-text-predicate.cfg
data/game_data/: Makefile  civserver.dsc
data/game_data/.svn/: entries
data/game_data/buildings/: Makefile.in
data/game_data/civ1/: Makefile  Makefile.in
data/game_data/civ2/: Makefile
data/game_data/default/: Makefile.in
data/game_data/icons/: Makefile  Makefile.in
data/game_data/isophex/: Makefile  Makefile.in
data/game_data/isotrident/: Makefile.in
data/game_data/misc/: Makefile.in
data/game_data/nation/: Makefile  aborigines.ruleset  afghani.ruleset  ainu.ruleset  akwe.ruleset  algerian.ruleset  american.ruleset  antarctican.ruleset  arab.ruleset  aramean.ruleset  argentine.ruleset  armenian.ruleset  assyrian.ruleset  australian.ruleset  austrian.ruleset  aymara.ruleset  azeri.ruleset  aztec.ruleset  babylonian.ruleset  barbarian.ruleset  basque.ruleset  bavarian.ruleset  belarusian.ruleset  belgian.ruleset  bengali.ruleset  boer.ruleset  bosnia.ruleset  brazilian.ruleset  breton.ruleset  british.ruleset  bulgarian.ruleset  burgundian.ruleset  burmese.ruleset  burundi.ruleset  byzantium.ruleset  cambodian.ruleset  canadian.ruleset  carthaginian.ruleset  catalan.ruleset  cherokee.ruleset  (+149 more)
data/game_data/scenario/: Makefile.in
data/game_data/themes/: Makefile
data/game_data/wonders/: Makefile.in
data/text/: CIV2_strategy_guide.txt  civ_II_manual.dependencies  civ_II_manual.dependencies.2  civ_II_manual.dependencies.neg  civ_II_manual.op  civ_II_manual.op_text  civ_II_manual.op_text_random  civ_II_manual.tagged  civ_II_manual.text.neg  civ_II_manual.txt  identity.op  identity.text  stop_words.txt
doc/: README  README.md  doc.0  environment.md
doc/logs/: 30thJan2019.md  README.md
freeciv/: README.md  template.py
freeciv/freeciv/: README.md  core_wrapper.py  unit.py  utils.py  world.py
freeciv/freeciv/connectivity/: client_socket.py  connectivity_constants.py
freeciv/freeciv/red/: connectdlg_common.py  learner_comms.py
freeciv/freeciv/src/: Interface.h
games/: small_5_5.sav
include/: PorterStemmer.h  nlp_config.h  nlp_filesystem.h  nlp_macros.h  nlp_string.h  nlp_time.h
notebook/: 1_Connection.ipynb  State Action Notebook - Web.ipynb  State-Action.ipynb
pyfc/: __init__.py  inference_handler.py  version.py  world.py
pyfc/connectivity/: dummy_handler copy.py  dummy_handler.py  dummy_handler_base.py  fc_iomanager.py
pyfc/fc_inference/: __init__.py  city_inference.py  dipl_inference.py  gov_inference.py  inference_base.py  map_inference.py  plyr_inference.py  tech_inference.py  unit_inference.py
pyfc/io_manager/: clinet.py
pyfc/minigames/: BLANK.py  README.md  minigame_cfg.py  minigames.py
pyfc/rewards/: __init__.py  reward_handler.py
pyfc/utils/: __init__.py  attr_handler.py  attr_lists.py  config_utils.py  debug.py
python_core/: README.md  template.py
python_core/freeciv/: core_wrapper.py  map_utils.py  save_map_utils.py  unit.py  world.py
python_core/freeciv/src/: CppFreecivWrapper.cpp  CppFreecivWrapper.h  learner_comms.h
scenarios/: sample.fccfg
src/: README  inference_engine.py  pyfc.py  pyfc_.py
src/civ_interface/: GNUmakefile  GNUmakefile_options  config.h  libtool
src/civ_interface/client/: GNUmakefile  Makefile  Makefile.in  Makefile.orig  attribute.c  callbacks.c  chatline_common.c  chatline_common.h  citydlg_common.c  client_main.c  client_main.h  climisc.c  clinet.c  clinet.h  colors_common.c  connectdlg_common.c  control.c  editor.c  freeciv-cmdline  freeciv-gtk2  freeciv-stub  goto.c  goto.h  learner_comms.h  libfcgui-stub.la  main.cpp  mapctrl_common.c  mapview_common.c  message.c  message.h  messagewin_common.c  net_callback.cpp  options.c  options.h  overview_common.c  packhand.c  packhand_gen.c  process_human_cmds.c  process_machine_cmds.c  repodlgs_common.c  (+9 more)
src/civ_interface/common/: GNUmakefile  Makefile  Makefile.in  base.c  borders.c  city.c  city.h  combat.c  connection.c  connection.h  effects.c  fc_types.h  featured_text.c  featured_text.h  game.c  game.h  government.c  idex.c  improvement.c  map.c  map.h  movement.c  nation.c  packets.c  packets_gen.c  packets_gen.h  player.c  requirements.c  requirements.h  tech.c  terrain.c  terrain.h  terrain.ih  tile.c  tile.h  tile.ih  unit.c  x.c
src/civ_interface/utility/: GNUmakefile  Makefile  netintf.c  netintf.h  rand.c  rand.h  specenum_gen.h
src/fc_inference/: action_inference.py  city_inference.py  dipl_inference.py  gov_inference.py  inference_base.py  map_inference.py  plyt_inference.py  tech_inference.py  unit_inference.py
src/io_manager/: __BLANK  fc_iomanager.py
src/libraries/config/: Config.cpp  GNUmakefile  main.cpp  nlp_defines.h  run.cfg
src/libraries/distr/: GNUmakefile  Gaussian.cpp  Sample.cpp  nlp_distr.h
src/libraries/filesystem/: CsvFile.cpp  Directory.cpp  File.cpp  GNUmakefile  main.cpp
src/libraries/math/: GNUmakefile  main.cpp  nlp_matrix.h  nlp_vector.h
src/libraries/misc/: GNUmakefile  hash_map
src/libraries/socket/: AllSockets.cpp  Buffer.cpp  ClientSocket.cpp  GNUmakefile  ServerSocket.cpp  Socket.cpp  main-general.cpp  main.cpp  nlp_socket.h  todo
src/libraries/string/: GNUmakefile  PorterStemmer.cpp  StringAdv.cpp  main.cpp  (+3 more)
src/model/: Feature.cpp  Feature.h  FeatureSpecialization.cpp  FeatureSpecialization.h  GNUmakefile  Game.cpp  Game.h  HiddenState.h  HiddenStateVar.cpp  HiddenStateVar.h  Interface.cpp  Interface.h  LinearApprox.cpp  LinearApprox.h  LogLinearModel.cpp  LogLinearModel.h  Montecarlo.cpp  Montecarlo.h  OperatorWords.cpp  OperatorWords.h  Play.cpp  Play.h  Probability.cpp  Probability.h  SearchTree.cpp  SearchTree.h  SentenceRelevance.cpp  SentenceRelevance.h  Text.cpp  Text.h  info.svn  learner_comms.h  main.cpp  predict_segments.py  protocol.txt
src/server/: GNUmakefile  GNUmakefile_options  config.h
src/utils/: attr_handler.py  config_utils.py  display_utils.py  utils.py
(+621 files in other folders)
