cmake_minimum_required(VERSION 3.12)
project(civ_silver)

set(CMAKE_CXX_STANDARD 14)

# updated CMakeLists according to here: https://gist.github.com/fracek/3323924

# find_package(PkgConfig REQUIRED)
# pkg_check_modules(GTK2 REQUIRED gtk+-2.0)

# Setup CMake to use GTK+, tell the compiler where to look for headers
# and to the linker where to look for libraries
# INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
# LINK_DIRECTORIES(${GTK2_LIBRARY_DIRS})

include_directories(include)
include_directories(src/civ_interface)
include_directories(src/civ_interface/client)
include_directories(src/civ_interface/client/agents)
include_directories(src/civ_interface/client/gui-cmdline)
include_directories(src/civ_interface/client/gui-gtk-2.0)
include_directories(src/civ_interface/client/gui-stub)
include_directories(src/civ_interface/client/include)
include_directories(src/civ_interface/client/x)
include_directories(src/civ_interface/common)
include_directories(src/civ_interface/common/aicore)
include_directories(src/civ_interface/utility)
include_directories(src/civ_interface/utility/ftwl)
include_directories(src/libraries/config)
include_directories(src/libraries/distr)
include_directories(src/libraries/filesystem)
include_directories(src/libraries/math)
include_directories(src/libraries/misc)
include_directories(src/libraries/socket)
include_directories(src/libraries/string)
include_directories(src/libraries/time)
include_directories(src/model)
include_directories(src/server)
include_directories(src/server/ai)
include_directories(src/server/common)
include_directories(src/server/common/aicore)
include_directories(src/server/dependencies/lua-5.1/etc)
include_directories(src/server/dependencies/lua-5.1/src)
include_directories(src/server/dependencies/toluaxx/include)
include_directories(src/server/dependencies/toluaxx/src/_bin)
include_directories(src/server/dependencies/toluaxx/src/lib)
include_directories(src/server/server)
include_directories(src/server/server/generator)
include_directories(src/server/server/scripting)
include_directories(src/server/utility)
include_directories(src/server/utility/ftwl)

# Add other flags to the compiler
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

add_executable(civ_silver
        include/nlp_config.h
        include/nlp_distr.h
        include/nlp_filesystem.h
        include/nlp_macros.h
        include/nlp_matrix.h
        include/nlp_socket.h
        include/nlp_string.h
        include/nlp_time.h
        include/nlp_vector.h
        include/PorterStemmer.h
        src/civ_interface/client/agents/agents.c
        src/civ_interface/client/agents/agents.h
        src/civ_interface/client/agents/cma_core.c
        src/civ_interface/client/agents/cma_core.h
        src/civ_interface/client/agents/cma_fec.c
        src/civ_interface/client/agents/cma_fec.h
        src/civ_interface/client/agents/sha.c
        src/civ_interface/client/agents/sha.h
        src/civ_interface/client/gui-cmdline/canvas.c
        src/civ_interface/client/gui-cmdline/canvas.h
        src/civ_interface/client/gui-cmdline/chatline.c
        src/civ_interface/client/gui-cmdline/chatline.h
        src/civ_interface/client/gui-cmdline/citydlg.c
        src/civ_interface/client/gui-cmdline/citydlg.h
        src/civ_interface/client/gui-cmdline/cityrep.c
        src/civ_interface/client/gui-cmdline/cityrep.h
        src/civ_interface/client/gui-cmdline/colors.c
        src/civ_interface/client/gui-cmdline/colors.h
        src/civ_interface/client/gui-cmdline/connectdlg.c
        src/civ_interface/client/gui-cmdline/connectdlg.h
        src/civ_interface/client/gui-cmdline/dialogs.c
        src/civ_interface/client/gui-cmdline/dialogs.h
        src/civ_interface/client/gui-cmdline/diplodlg.c
        src/civ_interface/client/gui-cmdline/diplodlg.h
        src/civ_interface/client/gui-cmdline/dummy_dialog_calls.c
        src/civ_interface/client/gui-cmdline/finddlg.c
        src/civ_interface/client/gui-cmdline/finddlg.h
        src/civ_interface/client/gui-cmdline/gotodlg.c
        src/civ_interface/client/gui-cmdline/gotodlg.h
        src/civ_interface/client/gui-cmdline/graphics.c
        src/civ_interface/client/gui-cmdline/graphics.h
        src/civ_interface/client/gui-cmdline/gui_main.c
        src/civ_interface/client/gui-cmdline/gui_main.h
        src/civ_interface/client/gui-cmdline/helpdlg.c
        src/civ_interface/client/gui-cmdline/helpdlg.h
        src/civ_interface/client/gui-cmdline/inteldlg.c
        src/civ_interface/client/gui-cmdline/inteldlg.h
        src/civ_interface/client/gui-cmdline/mapctrl.c
        src/civ_interface/client/gui-cmdline/mapctrl.h
        src/civ_interface/client/gui-cmdline/mapview.c
        src/civ_interface/client/gui-cmdline/mapview.h
        src/civ_interface/client/gui-cmdline/menu.c
        src/civ_interface/client/gui-cmdline/menu.h
        src/civ_interface/client/gui-cmdline/messagedlg.c
        src/civ_interface/client/gui-cmdline/messagedlg.h
        src/civ_interface/client/gui-cmdline/messagewin.c
        src/civ_interface/client/gui-cmdline/messagewin.h
        src/civ_interface/client/gui-cmdline/pages.c
        src/civ_interface/client/gui-cmdline/pages.h
        src/civ_interface/client/gui-cmdline/plrdlg.c
        src/civ_interface/client/gui-cmdline/plrdlg.h
        src/civ_interface/client/gui-cmdline/ratesdlg.c
        src/civ_interface/client/gui-cmdline/ratesdlg.h
        src/civ_interface/client/gui-cmdline/repodlgs.c
        src/civ_interface/client/gui-cmdline/repodlgs.h
        src/civ_interface/client/gui-cmdline/spaceshipdlg.c
        src/civ_interface/client/gui-cmdline/spaceshipdlg.h
        src/civ_interface/client/gui-cmdline/sprite.c
        src/civ_interface/client/gui-cmdline/sprite.h
        src/civ_interface/client/gui-cmdline/themes.c
        src/civ_interface/client/gui-cmdline/voteinfo_bar.c
        src/civ_interface/client/gui-cmdline/voteinfo_bar.h
        src/civ_interface/client/gui-cmdline/wldlg.c
        src/civ_interface/client/gui-cmdline/wldlg.h
        src/civ_interface/client/gui-gtk-2.0/canvas.c
        src/civ_interface/client/gui-gtk-2.0/canvas.h
        src/civ_interface/client/gui-gtk-2.0/caravan_dialog.c
        src/civ_interface/client/gui-gtk-2.0/chatline.c
        src/civ_interface/client/gui-gtk-2.0/chatline.h
        src/civ_interface/client/gui-gtk-2.0/choice_dialog.c
        src/civ_interface/client/gui-gtk-2.0/choice_dialog.h
        src/civ_interface/client/gui-gtk-2.0/citydlg.c
        src/civ_interface/client/gui-gtk-2.0/citydlg.h
        src/civ_interface/client/gui-gtk-2.0/cityrep.c
        src/civ_interface/client/gui-gtk-2.0/cityrep.h
        src/civ_interface/client/gui-gtk-2.0/cma_fe.c
        src/civ_interface/client/gui-gtk-2.0/cma_fe.h
        src/civ_interface/client/gui-gtk-2.0/colors.c
        src/civ_interface/client/gui-gtk-2.0/colors.h
        src/civ_interface/client/gui-gtk-2.0/connectdlg.c
        src/civ_interface/client/gui-gtk-2.0/connectdlg.h
        src/civ_interface/client/gui-gtk-2.0/dialogs.c
        src/civ_interface/client/gui-gtk-2.0/dialogs.h
        src/civ_interface/client/gui-gtk-2.0/diplodlg.c
        src/civ_interface/client/gui-gtk-2.0/diplodlg.h
        src/civ_interface/client/gui-gtk-2.0/diplomat_dialog.c
        src/civ_interface/client/gui-gtk-2.0/editgui.c
        src/civ_interface/client/gui-gtk-2.0/editgui.h
        src/civ_interface/client/gui-gtk-2.0/editprop.c
        src/civ_interface/client/gui-gtk-2.0/editprop.h
        src/civ_interface/client/gui-gtk-2.0/embedggz.c
        src/civ_interface/client/gui-gtk-2.0/finddlg.c
        src/civ_interface/client/gui-gtk-2.0/finddlg.h
        src/civ_interface/client/gui-gtk-2.0/gamedlgs.c
        src/civ_interface/client/gui-gtk-2.0/gotodlg.c
        src/civ_interface/client/gui-gtk-2.0/gotodlg.h
        src/civ_interface/client/gui-gtk-2.0/graphics.c
        src/civ_interface/client/gui-gtk-2.0/graphics.h
        src/civ_interface/client/gui-gtk-2.0/gtkpixcomm.c
        src/civ_interface/client/gui-gtk-2.0/gtkpixcomm.h
        src/civ_interface/client/gui-gtk-2.0/gui_main.c
        src/civ_interface/client/gui-gtk-2.0/gui_main.h
        src/civ_interface/client/gui-gtk-2.0/gui_stuff.c
        src/civ_interface/client/gui-gtk-2.0/gui_stuff.h
        src/civ_interface/client/gui-gtk-2.0/happiness.c
        src/civ_interface/client/gui-gtk-2.0/happiness.h
        src/civ_interface/client/gui-gtk-2.0/helpdlg.c
        src/civ_interface/client/gui-gtk-2.0/helpdlg.h
        src/civ_interface/client/gui-gtk-2.0/inputdlg.c
        src/civ_interface/client/gui-gtk-2.0/inputdlg.h
        src/civ_interface/client/gui-gtk-2.0/inteldlg.c
        src/civ_interface/client/gui-gtk-2.0/inteldlg.h
        src/civ_interface/client/gui-gtk-2.0/mapctrl.c
        src/civ_interface/client/gui-gtk-2.0/mapctrl.h
        src/civ_interface/client/gui-gtk-2.0/mapview.c
        src/civ_interface/client/gui-gtk-2.0/mapview.h
        src/civ_interface/client/gui-gtk-2.0/menu.c
        src/civ_interface/client/gui-gtk-2.0/menu.h
        src/civ_interface/client/gui-gtk-2.0/messagedlg.c
        src/civ_interface/client/gui-gtk-2.0/messagedlg.h
        src/civ_interface/client/gui-gtk-2.0/messagewin.c
        src/civ_interface/client/gui-gtk-2.0/messagewin.h
        src/civ_interface/client/gui-gtk-2.0/optiondlg.h
        src/civ_interface/client/gui-gtk-2.0/pages.c
        src/civ_interface/client/gui-gtk-2.0/pages.h
        src/civ_interface/client/gui-gtk-2.0/plrdlg.c
        src/civ_interface/client/gui-gtk-2.0/plrdlg.h
        src/civ_interface/client/gui-gtk-2.0/ratesdlg.h
        src/civ_interface/client/gui-gtk-2.0/repodlgs.c
        src/civ_interface/client/gui-gtk-2.0/repodlgs.h
        src/civ_interface/client/gui-gtk-2.0/resources.c
        src/civ_interface/client/gui-gtk-2.0/resources.h
        src/civ_interface/client/gui-gtk-2.0/spaceshipdlg.c
        src/civ_interface/client/gui-gtk-2.0/spaceshipdlg.h
        src/civ_interface/client/gui-gtk-2.0/sprite.c
        src/civ_interface/client/gui-gtk-2.0/sprite.h
        src/civ_interface/client/gui-gtk-2.0/theme_dlg.c
        src/civ_interface/client/gui-gtk-2.0/themes.c
        src/civ_interface/client/gui-gtk-2.0/tileset_dlg.c
        src/civ_interface/client/gui-gtk-2.0/voteinfo_bar.c
        src/civ_interface/client/gui-gtk-2.0/voteinfo_bar.h
        src/civ_interface/client/gui-gtk-2.0/wldlg.c
        src/civ_interface/client/gui-gtk-2.0/wldlg.h
        src/civ_interface/client/gui-stub/canvas.c
        src/civ_interface/client/gui-stub/canvas.h
        src/civ_interface/client/gui-stub/chatline.c
        src/civ_interface/client/gui-stub/chatline.h
        src/civ_interface/client/gui-stub/citydlg.c
        src/civ_interface/client/gui-stub/citydlg.h
        src/civ_interface/client/gui-stub/cityrep.c
        src/civ_interface/client/gui-stub/cityrep.h
        src/civ_interface/client/gui-stub/colors.c
        src/civ_interface/client/gui-stub/colors.h
        src/civ_interface/client/gui-stub/connectdlg.c
        src/civ_interface/client/gui-stub/connectdlg.h
        src/civ_interface/client/gui-stub/dialogs.c
        src/civ_interface/client/gui-stub/dialogs.h
        src/civ_interface/client/gui-stub/diplodlg.c
        src/civ_interface/client/gui-stub/diplodlg.h
        src/civ_interface/client/gui-stub/finddlg.c
        src/civ_interface/client/gui-stub/finddlg.h
        src/civ_interface/client/gui-stub/gotodlg.c
        src/civ_interface/client/gui-stub/gotodlg.h
        src/civ_interface/client/gui-stub/graphics.c
        src/civ_interface/client/gui-stub/graphics.h
        src/civ_interface/client/gui-stub/gui_main.c
        src/civ_interface/client/gui-stub/gui_main.h
        src/civ_interface/client/gui-stub/helpdlg.c
        src/civ_interface/client/gui-stub/helpdlg.h
        src/civ_interface/client/gui-stub/inteldlg.c
        src/civ_interface/client/gui-stub/inteldlg.h
        src/civ_interface/client/gui-stub/main.cpp
        src/civ_interface/client/gui-stub/mapctrl.c
        src/civ_interface/client/gui-stub/mapctrl.h
        src/civ_interface/client/gui-stub/mapview.c
        src/civ_interface/client/gui-stub/mapview.h
        src/civ_interface/client/gui-stub/menu.c
        src/civ_interface/client/gui-stub/menu.h
        src/civ_interface/client/gui-stub/messagedlg.c
        src/civ_interface/client/gui-stub/messagedlg.h
        src/civ_interface/client/gui-stub/messagewin.c
        src/civ_interface/client/gui-stub/messagewin.h
        src/civ_interface/client/gui-stub/pages.c
        src/civ_interface/client/gui-stub/pages.h
        src/civ_interface/client/gui-stub/plrdlg.c
        src/civ_interface/client/gui-stub/plrdlg.h
        src/civ_interface/client/gui-stub/ratesdlg.c
        src/civ_interface/client/gui-stub/ratesdlg.h
        src/civ_interface/client/gui-stub/repodlgs.c
        src/civ_interface/client/gui-stub/repodlgs.h
        src/civ_interface/client/gui-stub/spaceshipdlg.c
        src/civ_interface/client/gui-stub/spaceshipdlg.h
        src/civ_interface/client/gui-stub/sprite.c
        src/civ_interface/client/gui-stub/sprite.h
        src/civ_interface/client/gui-stub/themes.c
        src/civ_interface/client/gui-stub/voteinfo_bar.c
        src/civ_interface/client/gui-stub/voteinfo_bar.h
        src/civ_interface/client/gui-stub/wldlg.c
        src/civ_interface/client/gui-stub/wldlg.h
        src/civ_interface/client/include/canvas_g.h
        src/civ_interface/client/include/chatline_g.h
        src/civ_interface/client/include/citydlg_g.h
        src/civ_interface/client/include/cityrep_g.h
        src/civ_interface/client/include/colors_g.h
        src/civ_interface/client/include/connectdlg_g.h
        src/civ_interface/client/include/dialogs_g.h
        src/civ_interface/client/include/diplodlg_g.h
        src/civ_interface/client/include/editgui_g.h
        src/civ_interface/client/include/finddlg_g.h
        src/civ_interface/client/include/ggz_g.h
        src/civ_interface/client/include/gotodlg_g.h
        src/civ_interface/client/include/graphics_g.h
        src/civ_interface/client/include/gui_main_g.h
        src/civ_interface/client/include/helpdlg_g.h
        src/civ_interface/client/include/inteldlg_g.h
        src/civ_interface/client/include/mapctrl_g.h
        src/civ_interface/client/include/mapview_g.h
        src/civ_interface/client/include/menu_g.h
        src/civ_interface/client/include/messagedlg_g.h
        src/civ_interface/client/include/messagewin_g.h
        src/civ_interface/client/include/pages_g.h
        src/civ_interface/client/include/plrdlg_g.h
        src/civ_interface/client/include/ratesdlg_g.h
        src/civ_interface/client/include/repodlgs_g.h
        src/civ_interface/client/include/spaceshipdlg_g.h
        src/civ_interface/client/include/sprite_g.h
        src/civ_interface/client/include/themes_g.h
        src/civ_interface/client/include/voteinfo_bar_g.h
        src/civ_interface/client/include/wldlg_g.h
        src/civ_interface/client/x/audio_sdl.c
        src/civ_interface/client/x/audio_sdl.h
        src/civ_interface/client/attribute.c
        src/civ_interface/client/attribute.h
        src/civ_interface/client/audio.c
        src/civ_interface/client/audio.h
        src/civ_interface/client/audio_none.c
        src/civ_interface/client/audio_none.h
        src/civ_interface/client/callbacks.c
        src/civ_interface/client/chatline_common.c
        src/civ_interface/client/chatline_common.h
        src/civ_interface/client/citydlg_common.c
        src/civ_interface/client/citydlg_common.h
        src/civ_interface/client/cityrepdata.c
        src/civ_interface/client/cityrepdata.h
        src/civ_interface/client/client_main.c
        src/civ_interface/client/client_main.h
        src/civ_interface/client/climap.c
        src/civ_interface/client/climap.h
        src/civ_interface/client/climisc.c
        src/civ_interface/client/climisc.h
        src/civ_interface/client/clinet.c
        src/civ_interface/client/clinet.h
        src/civ_interface/client/colors_common.c
        src/civ_interface/client/colors_common.h
        src/civ_interface/client/connectdlg_common.c
        src/civ_interface/client/connectdlg_common.h
        src/civ_interface/client/control.c
        src/civ_interface/client/control.h
        src/civ_interface/client/dummy.c
        src/civ_interface/client/editor.c
        src/civ_interface/client/editor.h
        src/civ_interface/client/Freeciv.h
        src/civ_interface/client/ggzclient.c
        src/civ_interface/client/ggzclient.h
        src/civ_interface/client/global_worklist.c
        src/civ_interface/client/global_worklist.h
        src/civ_interface/client/goto.c
        src/civ_interface/client/goto.h
        src/civ_interface/client/helpdata.c
        src/civ_interface/client/helpdata.h
        src/civ_interface/client/learner_comms.h
        src/civ_interface/client/main.cpp
        src/civ_interface/client/mapctrl_common.c
        src/civ_interface/client/mapctrl_common.h
        src/civ_interface/client/mapview_common.c
        src/civ_interface/client/mapview_common.h
        src/civ_interface/client/message.c
        src/civ_interface/client/message.h
        src/civ_interface/client/messagewin_common.c
        src/civ_interface/client/messagewin_common.h
        src/civ_interface/client/net_callback.cpp
        src/civ_interface/client/options.c
        src/civ_interface/client/options.h
        src/civ_interface/client/overview_common.c
        src/civ_interface/client/overview_common.h
        src/civ_interface/client/packhand.c
        src/civ_interface/client/packhand.h
        src/civ_interface/client/packhand_gen.c
        src/civ_interface/client/packhand_gen.h
        src/civ_interface/client/plrdlg_common.c
        src/civ_interface/client/plrdlg_common.h
        src/civ_interface/client/process_human_cmds.c
        src/civ_interface/client/process_machine_cmds.c
        src/civ_interface/client/repodlgs_common.c
        src/civ_interface/client/repodlgs_common.h
        src/civ_interface/client/reqtree.c
        src/civ_interface/client/reqtree.h
        src/civ_interface/client/savegame.c
        src/civ_interface/client/savegame.h
        src/civ_interface/client/servers.c
        src/civ_interface/client/servers.h
        src/civ_interface/client/servers.orig.c
        src/civ_interface/client/state.h
        src/civ_interface/client/text.c
        src/civ_interface/client/text.h
        src/civ_interface/client/themes_common.c
        src/civ_interface/client/themes_common.h
        src/civ_interface/client/tilespec.c
        src/civ_interface/client/tilespec.h
        src/civ_interface/client/voteinfo.c
        src/civ_interface/client/voteinfo.h
        src/civ_interface/common/aicore/aisupport.c
        src/civ_interface/common/aicore/aisupport.h
        src/civ_interface/common/aicore/caravan.c
        src/civ_interface/common/aicore/caravan.h
        src/civ_interface/common/aicore/citymap.c
        src/civ_interface/common/aicore/citymap.h
        src/civ_interface/common/aicore/cm.c
        src/civ_interface/common/aicore/cm.h
        src/civ_interface/common/aicore/path_finding.c
        src/civ_interface/common/aicore/path_finding.h
        src/civ_interface/common/aicore/pf_tools.c
        src/civ_interface/common/aicore/pf_tools.h
        src/civ_interface/common/ai.c
        src/civ_interface/common/ai.h
        src/civ_interface/common/base.c
        src/civ_interface/common/base.h
        src/civ_interface/common/borders.c
        src/civ_interface/common/borders.h
        src/civ_interface/common/capstr.c
        src/civ_interface/common/capstr.h
        src/civ_interface/common/city.c
        src/civ_interface/common/city.h
        src/civ_interface/common/combat.c
        src/civ_interface/common/combat.h
        src/civ_interface/common/connection.c
        src/civ_interface/common/connection.h
        src/civ_interface/common/dataio.c
        src/civ_interface/common/dataio.h
        src/civ_interface/common/diptreaty.c
        src/civ_interface/common/diptreaty.h
        src/civ_interface/common/effects.c
        src/civ_interface/common/effects.h
        src/civ_interface/common/events.c
        src/civ_interface/common/events.h
        src/civ_interface/common/fc_types.h
        src/civ_interface/common/featured_text.c
        src/civ_interface/common/featured_text.h
        src/civ_interface/common/game.c
        src/civ_interface/common/game.h
        src/civ_interface/common/government.c
        src/civ_interface/common/government.h
        src/civ_interface/common/idex.c
        src/civ_interface/common/idex.h
        src/civ_interface/common/idex.orig.c
        src/civ_interface/common/improvement.c
        src/civ_interface/common/improvement.h
        src/civ_interface/common/map.c
        src/civ_interface/common/map.h
        src/civ_interface/common/movement.c
        src/civ_interface/common/movement.h
        src/civ_interface/common/nation.c
        src/civ_interface/common/nation.h
        src/civ_interface/common/packets.c
        src/civ_interface/common/packets.h
        src/civ_interface/common/packets_gen.c
        src/civ_interface/common/packets_gen.h
        src/civ_interface/common/player.c
        src/civ_interface/common/player.h
        src/civ_interface/common/requirements.c
        src/civ_interface/common/requirements.h
        src/civ_interface/common/spaceship.c
        src/civ_interface/common/spaceship.h
        src/civ_interface/common/specialist.c
        src/civ_interface/common/specialist.h
        src/civ_interface/common/team.c
        src/civ_interface/common/team.h
        src/civ_interface/common/tech.c
        src/civ_interface/common/tech.h
        src/civ_interface/common/terrain.c
        src/civ_interface/common/terrain.h
        src/civ_interface/common/tile.c
        src/civ_interface/common/tile.h
        src/civ_interface/common/unit.c
        src/civ_interface/common/unit.h
        src/civ_interface/common/unitlist.c
        src/civ_interface/common/unitlist.h
        src/civ_interface/common/unittype.c
        src/civ_interface/common/unittype.h
        src/civ_interface/common/version.c
        src/civ_interface/common/version.h
        src/civ_interface/common/vision.c
        src/civ_interface/common/vision.h
        src/civ_interface/common/worklist.c
        src/civ_interface/common/worklist.h
        src/civ_interface/common/x.c
        src/civ_interface/utility/ftwl/back_end.h
        src/civ_interface/utility/ftwl/be_common_cairo_32.c
        src/civ_interface/utility/ftwl/be_common_cairo_32.h
        src/civ_interface/utility/ftwl/be_common_pixels.c
        src/civ_interface/utility/ftwl/be_sdl.c
        src/civ_interface/utility/ftwl/be_sdl_pixels_cairo_32.c
        src/civ_interface/utility/ftwl/be_x11_cairo_32.c
        src/civ_interface/utility/ftwl/common_types.c
        src/civ_interface/utility/ftwl/common_types.h
        src/civ_interface/utility/ftwl/text_renderer.c
        src/civ_interface/utility/ftwl/text_renderer.h
        src/civ_interface/utility/ftwl/theme_engine.c
        src/civ_interface/utility/ftwl/theme_engine.h
        src/civ_interface/utility/ftwl/widget.c
        src/civ_interface/utility/ftwl/widget.h
        src/civ_interface/utility/ftwl/widget_button.c
        src/civ_interface/utility/ftwl/widget_core.c
        src/civ_interface/utility/ftwl/widget_edit.c
        src/civ_interface/utility/ftwl/widget_label.c
        src/civ_interface/utility/ftwl/widget_list.c
        src/civ_interface/utility/ftwl/widget_p.h
        src/civ_interface/utility/ftwl/widget_slider.c
        src/civ_interface/utility/ftwl/widget_timeout.c
        src/civ_interface/utility/ftwl/widget_window.c
        src/civ_interface/utility/astring.c
        src/civ_interface/utility/astring.h
        src/civ_interface/utility/capability.c
        src/civ_interface/utility/capability.h
        src/civ_interface/utility/distribute.c
        src/civ_interface/utility/distribute.h
        src/civ_interface/utility/fciconv.c
        src/civ_interface/utility/fciconv.h
        src/civ_interface/utility/fcintl.c
        src/civ_interface/utility/fcintl.h
        src/civ_interface/utility/genlist.c
        src/civ_interface/utility/genlist.h
        src/civ_interface/utility/hash.c
        src/civ_interface/utility/hash.h
        src/civ_interface/utility/inputfile.c
        src/civ_interface/utility/inputfile.h
        src/civ_interface/utility/ioz.c
        src/civ_interface/utility/ioz.h
        src/civ_interface/utility/iterator.c
        src/civ_interface/utility/iterator.h
        src/civ_interface/utility/log.c
        src/civ_interface/utility/log.h
        src/civ_interface/utility/md5.c
        src/civ_interface/utility/md5.h
        src/civ_interface/utility/mem.c
        src/civ_interface/utility/mem.h
        src/civ_interface/utility/netintf.c
        src/civ_interface/utility/netintf.h
        src/civ_interface/utility/pqueue.c
        src/civ_interface/utility/pqueue.h
        src/civ_interface/utility/rand.c
        src/civ_interface/utility/rand.h
        src/civ_interface/utility/registry.c
        src/civ_interface/utility/registry.h
        src/civ_interface/utility/sbuffer.c
        src/civ_interface/utility/sbuffer.h
        src/civ_interface/utility/shared.c
        src/civ_interface/utility/shared.h
        src/civ_interface/utility/specenum_gen.h
        src/civ_interface/utility/speclist.h
        src/civ_interface/utility/specvec.h
        src/civ_interface/utility/string_vector.c
        src/civ_interface/utility/string_vector.h
        src/civ_interface/utility/support.c
        src/civ_interface/utility/support.h
        src/civ_interface/utility/timing.c
        src/civ_interface/utility/timing.h
        src/civ_interface/config.h
        src/libraries/config/Config.cpp
        src/libraries/config/main.cpp
        src/libraries/config/nlp_config.h
        src/libraries/config/nlp_defines.h
        src/libraries/distr/Gaussian.cpp
        src/libraries/distr/nlp_distr.h
        src/libraries/distr/Sample.cpp
        src/libraries/filesystem/CsvFile.cpp
        src/libraries/filesystem/Directory.cpp
        src/libraries/filesystem/File.cpp
        src/libraries/filesystem/main.cpp
        src/libraries/filesystem/nlp_filesystem.h
        src/libraries/math/main.cpp
        src/libraries/math/nlp_matrix.h
        src/libraries/math/nlp_vector.h
        src/libraries/misc/nlp_macros.h
        src/libraries/socket/AllSockets.cpp
        src/libraries/socket/Buffer.cpp
        src/libraries/socket/ClientSocket.cpp
        src/libraries/socket/main-general.cpp
        src/libraries/socket/main.cpp
        src/libraries/socket/nlp_socket.h
        src/libraries/socket/ServerSocket.cpp
        src/libraries/socket/Socket.cpp
        src/libraries/string/main.cpp
        src/libraries/string/nlp_string.h
        src/libraries/string/PorterStemmer.cpp
        src/libraries/string/PorterStemmer.h
        src/libraries/string/StringAdv.cpp
        src/libraries/string/StringBase.cpp
        src/libraries/string/StringFind.cpp
        src/libraries/string/StringOperators.cpp
        src/libraries/time/main.cpp
        src/libraries/time/nlp_time.h
        src/libraries/time/Time.cpp
        src/model/Feature.cpp
        src/model/Feature.h
        src/model/FeatureSpecialization.cpp
        src/model/FeatureSpecialization.h
        src/model/Game.cpp
        src/model/Game.h
        src/model/HiddenState.h
        src/model/HiddenStateVar.cpp
        src/model/HiddenStateVar.h
        src/model/Interface.cpp
        src/model/Interface.h
        src/model/learner_comms.h
        src/model/LinearApprox.cpp
        src/model/LinearApprox.h
        src/model/LogLinearModel.cpp
        src/model/LogLinearModel.h
        src/model/main.cpp
        src/model/Montecarlo.cpp
        src/model/Montecarlo.h
        src/model/OperatorWords.cpp
        src/model/OperatorWords.h
        src/model/Play.cpp
        src/model/Play.h
        src/model/Probability.cpp
        src/model/Probability.h
        src/model/SearchTree.cpp
        src/model/SearchTree.h
        src/model/SentenceRelevance.cpp
        src/model/SentenceRelevance.h
        src/model/Text.cpp
        src/model/Text.h
        src/server/ai/advdiplomacy.c
        src/server/ai/advdiplomacy.h
        src/server/ai/advdomestic.c
        src/server/ai/advdomestic.h
        src/server/ai/advmilitary.c
        src/server/ai/advmilitary.h
        src/server/ai/advspace.c
        src/server/ai/advspace.h
        src/server/ai/aiair.c
        src/server/ai/aiair.h
        src/server/ai/aicity.c
        src/server/ai/aicity.h
        src/server/ai/aidata.c
        src/server/ai/aidata.h
        src/server/ai/aidiplomat.c
        src/server/ai/aidiplomat.h
        src/server/ai/aiexplorer.c
        src/server/ai/aiexplorer.h
        src/server/ai/aiferry.c
        src/server/ai/aiferry.h
        src/server/ai/aiguard.c
        src/server/ai/aiguard.h
        src/server/ai/aihand.c
        src/server/ai/aihand.h
        src/server/ai/aihunt.c
        src/server/ai/aihunt.h
        src/server/ai/ailog.c
        src/server/ai/ailog.h
        src/server/ai/aiparatrooper.c
        src/server/ai/aiparatrooper.h
        src/server/ai/aisettler.c
        src/server/ai/aisettler.h
        src/server/ai/aitech.c
        src/server/ai/aitech.h
        src/server/ai/aitools.c
        src/server/ai/aitools.h
        src/server/ai/aiunit.c
        src/server/ai/aiunit.h
        src/server/common/aicore/aisupport.c
        src/server/common/aicore/aisupport.h
        src/server/common/aicore/caravan.c
        src/server/common/aicore/caravan.h
        src/server/common/aicore/citymap.c
        src/server/common/aicore/citymap.h
        src/server/common/aicore/cm.c
        src/server/common/aicore/cm.h
        src/server/common/aicore/path_finding.c
        src/server/common/aicore/path_finding.h
        src/server/common/aicore/pf_tools.c
        src/server/common/aicore/pf_tools.h
        src/server/common/ai.c
        src/server/common/ai.h
        src/server/common/base.c
        src/server/common/base.h
        src/server/common/borders.c
        src/server/common/borders.h
        src/server/common/capstr.c
        src/server/common/capstr.h
        src/server/common/city.c
        src/server/common/city.h
        src/server/common/combat.c
        src/server/common/combat.h
        src/server/common/connection.c
        src/server/common/connection.h
        src/server/common/dataio.c
        src/server/common/dataio.h
        src/server/common/diptreaty.c
        src/server/common/diptreaty.h
        src/server/common/effects.c
        src/server/common/effects.h
        src/server/common/events.c
        src/server/common/events.h
        src/server/common/fc_types.h
        src/server/common/featured_text.c
        src/server/common/featured_text.h
        src/server/common/game.c
        src/server/common/game.h
        src/server/common/government.c
        src/server/common/government.h
        src/server/common/idex.c
        src/server/common/idex.h
        src/server/common/idex.orig.c
        src/server/common/improvement.c
        src/server/common/improvement.h
        src/server/common/map.c
        src/server/common/map.h
        src/server/common/movement.c
        src/server/common/movement.h
        src/server/common/nation.c
        src/server/common/nation.h
        src/server/common/packets.c
        src/server/common/packets.h
        src/server/common/packets_gen.c
        src/server/common/packets_gen.h
        src/server/common/player.c
        src/server/common/player.h
        src/server/common/req.h
        src/server/common/requirements.c
        src/server/common/requirements.h
        src/server/common/spaceship.c
        src/server/common/spaceship.h
        src/server/common/specialist.c
        src/server/common/specialist.h
        src/server/common/team.c
        src/server/common/team.h
        src/server/common/tech.c
        src/server/common/tech.h
        src/server/common/terrain.c
        src/server/common/terrain.h
        src/server/common/tile.c
        src/server/common/tile.h
        src/server/common/unit.c
        src/server/common/unit.h
        src/server/common/unitlist.c
        src/server/common/unitlist.h
        src/server/common/unittype.c
        src/server/common/unittype.h
        src/server/common/version.c
        src/server/common/version.h
        src/server/common/vision.c
        src/server/common/vision.h
        src/server/common/worklist.c
        src/server/common/worklist.h
        src/server/dependencies/lua-5.1/etc/lua.hpp
        src/server/dependencies/lua-5.1/src/lapi.c
        src/server/dependencies/lua-5.1/src/lapi.h
        src/server/dependencies/lua-5.1/src/lauxlib.c
        src/server/dependencies/lua-5.1/src/lauxlib.h
        src/server/dependencies/lua-5.1/src/lbaselib.c
        src/server/dependencies/lua-5.1/src/lcode.c
        src/server/dependencies/lua-5.1/src/lcode.h
        src/server/dependencies/lua-5.1/src/ldblib.c
        src/server/dependencies/lua-5.1/src/ldebug.c
        src/server/dependencies/lua-5.1/src/ldebug.h
        src/server/dependencies/lua-5.1/src/ldo.c
        src/server/dependencies/lua-5.1/src/ldo.h
        src/server/dependencies/lua-5.1/src/ldump.c
        src/server/dependencies/lua-5.1/src/lfunc.c
        src/server/dependencies/lua-5.1/src/lfunc.h
        src/server/dependencies/lua-5.1/src/lgc.c
        src/server/dependencies/lua-5.1/src/lgc.h
        src/server/dependencies/lua-5.1/src/linit.c
        src/server/dependencies/lua-5.1/src/liolib.c
        src/server/dependencies/lua-5.1/src/llex.c
        src/server/dependencies/lua-5.1/src/llex.h
        src/server/dependencies/lua-5.1/src/llimits.h
        src/server/dependencies/lua-5.1/src/lmathlib.c
        src/server/dependencies/lua-5.1/src/lmem.c
        src/server/dependencies/lua-5.1/src/lmem.h
        src/server/dependencies/lua-5.1/src/loadlib.c
        src/server/dependencies/lua-5.1/src/lobject.c
        src/server/dependencies/lua-5.1/src/lobject.h
        src/server/dependencies/lua-5.1/src/localluaconf.h
        src/server/dependencies/lua-5.1/src/lopcodes.c
        src/server/dependencies/lua-5.1/src/lopcodes.h
        src/server/dependencies/lua-5.1/src/loslib.c
        src/server/dependencies/lua-5.1/src/lparser.c
        src/server/dependencies/lua-5.1/src/lparser.h
        src/server/dependencies/lua-5.1/src/lstate.c
        src/server/dependencies/lua-5.1/src/lstate.h
        src/server/dependencies/lua-5.1/src/lstring.c
        src/server/dependencies/lua-5.1/src/lstring.h
        src/server/dependencies/lua-5.1/src/lstrlib.c
        src/server/dependencies/lua-5.1/src/ltable.c
        src/server/dependencies/lua-5.1/src/ltable.h
        src/server/dependencies/lua-5.1/src/ltablib.c
        src/server/dependencies/lua-5.1/src/ltm.c
        src/server/dependencies/lua-5.1/src/ltm.h
        src/server/dependencies/lua-5.1/src/lua.h
        src/server/dependencies/lua-5.1/src/luac.c
        src/server/dependencies/lua-5.1/src/luaconf.h
        src/server/dependencies/lua-5.1/src/lualib.h
        src/server/dependencies/lua-5.1/src/lundump.c
        src/server/dependencies/lua-5.1/src/lundump.h
        src/server/dependencies/lua-5.1/src/lvm.c
        src/server/dependencies/lua-5.1/src/lvm.h
        src/server/dependencies/lua-5.1/src/lzio.c
        src/server/dependencies/lua-5.1/src/lzio.h
        src/server/dependencies/lua-5.1/src/print.c
        src/server/dependencies/toluaxx/include/toluaxx.h
        src/server/dependencies/toluaxx/src/_bin/help.cxx
        src/server/dependencies/toluaxx/src/_bin/help.hxx
        src/server/dependencies/toluaxx/src/_bin/main.cxx
        src/server/dependencies/toluaxx/src/_bin/main.hxx
        src/server/dependencies/toluaxx/src/_bin/parsecmd.cxx
        src/server/dependencies/toluaxx/src/_bin/parsecmd.hxx
        src/server/dependencies/toluaxx/src/_bin/platform.hxx
        src/server/dependencies/toluaxx/src/_bin/toluaxx.bind.cxx
        src/server/dependencies/toluaxx/src/lib/tolua_event.c
        src/server/dependencies/toluaxx/src/lib/tolua_event.h
        src/server/dependencies/toluaxx/src/lib/tolua_is.c
        src/server/dependencies/toluaxx/src/lib/tolua_map.c
        src/server/dependencies/toluaxx/src/lib/tolua_push.c
        src/server/dependencies/toluaxx/src/lib/tolua_to.c
        src/server/server/generator/height_map.c
        src/server/server/generator/height_map.h
        src/server/server/generator/mapgen.c
        src/server/server/generator/mapgen.h
        src/server/server/generator/mapgen_topology.c
        src/server/server/generator/mapgen_topology.h
        src/server/server/generator/startpos.c
        src/server/server/generator/startpos.h
        src/server/server/generator/temperature_map.c
        src/server/server/generator/temperature_map.h
        src/server/server/generator/utilities.c
        src/server/server/generator/utilities.h
        src/server/server/scripting/api_actions.c
        src/server/server/scripting/api_actions.h
        src/server/server/scripting/api_find.c
        src/server/server/scripting/api_find.h
        src/server/server/scripting/api_gen.c
        src/server/server/scripting/api_gen.h
        src/server/server/scripting/api_intl.c
        src/server/server/scripting/api_intl.h
        src/server/server/scripting/api_methods.c
        src/server/server/scripting/api_methods.h
        src/server/server/scripting/api_notify.c
        src/server/server/scripting/api_notify.h
        src/server/server/scripting/api_types.h
        src/server/server/scripting/api_utilities.c
        src/server/server/scripting/api_utilities.h
        src/server/server/scripting/script.c
        src/server/server/scripting/script.h
        src/server/server/scripting/script_signal.c
        src/server/server/scripting/script_signal.h
        src/server/server/aiiface.c
        src/server/server/aiiface.h
        src/server/server/auth.c
        src/server/server/auth.h
        src/server/server/barbarian.c
        src/server/server/barbarian.h
        src/server/server/cityhand.c
        src/server/server/cityhand.h
        src/server/server/citytools.c
        src/server/server/citytools.h
        src/server/server/cityturn.c
        src/server/server/cityturn.h
        src/server/server/civserver.c
        src/server/server/civserver.h
        src/server/server/commands.c
        src/server/server/commands.h
        src/server/server/connecthand.c
        src/server/server/connecthand.h
        src/server/server/console.c
        src/server/server/console.h
        src/server/server/copygame.c
        src/server/server/diplhand.c
        src/server/server/diplhand.h
        src/server/server/diplomats.c
        src/server/server/diplomats.h
        src/server/server/edithand.c
        src/server/server/edithand.h
        src/server/server/gamehand.c
        src/server/server/gamehand.h
        src/server/server/ggzserver.c
        src/server/server/ggzserver.h
        src/server/server/gotohand.c
        src/server/server/gotohand.h
        src/server/server/hand_gen.c
        src/server/server/hand_gen.h
        src/server/server/handchat.c
        src/server/server/handchat.h
        src/server/server/maphand.c
        src/server/server/maphand.h
        src/server/server/mem_cleaner.cpp
        src/server/server/meta.c
        src/server/server/meta.h
        src/server/server/notify.c
        src/server/server/notify.h
        src/server/server/plrhand.c
        src/server/server/plrhand.h
        src/server/server/report.c
        src/server/server/report.h
        src/server/server/ruleset.c
        src/server/server/ruleset.h
        src/server/server/sanitycheck.c
        src/server/server/sanitycheck.h
        src/server/server/savegame.c
        src/server/server/savegame.h
        src/server/server/score.c
        src/server/server/score.h
        src/server/server/sernet.c
        src/server/server/sernet.h
        src/server/server/settings.c
        src/server/server/settings.h
        src/server/server/settings.orig.c
        src/server/server/settlers.c
        src/server/server/settlers.h
        src/server/server/spacerace.c
        src/server/server/spacerace.h
        src/server/server/srv_main.c
        src/server/server/srv_main.h
        src/server/server/stdinhand.c
        src/server/server/stdinhand.h
        src/server/server/techtools.c
        src/server/server/techtools.h
        src/server/server/temp.c
        src/server/server/timer.cpp
        src/server/server/unithand.c
        src/server/server/unithand.h
        src/server/server/unittools.c
        src/server/server/unittools.h
        src/server/server/voting.c
        src/server/server/voting.h
        src/server/utility/ftwl/back_end.h
        src/server/utility/ftwl/be_common_cairo_32.c
        src/server/utility/ftwl/be_common_cairo_32.h
        src/server/utility/ftwl/be_common_pixels.c
        src/server/utility/ftwl/be_sdl.c
        src/server/utility/ftwl/be_sdl_pixels_cairo_32.c
        src/server/utility/ftwl/be_x11_cairo_32.c
        src/server/utility/ftwl/common_types.c
        src/server/utility/ftwl/common_types.h
        src/server/utility/ftwl/text_renderer.c
        src/server/utility/ftwl/text_renderer.h
        src/server/utility/ftwl/theme_engine.c
        src/server/utility/ftwl/theme_engine.h
        src/server/utility/ftwl/widget.c
        src/server/utility/ftwl/widget.h
        src/server/utility/ftwl/widget_button.c
        src/server/utility/ftwl/widget_core.c
        src/server/utility/ftwl/widget_edit.c
        src/server/utility/ftwl/widget_label.c
        src/server/utility/ftwl/widget_list.c
        src/server/utility/ftwl/widget_p.h
        src/server/utility/ftwl/widget_slider.c
        src/server/utility/ftwl/widget_timeout.c
        src/server/utility/ftwl/widget_window.c
        src/server/utility/astring.c
        src/server/utility/astring.h
        src/server/utility/capability.c
        src/server/utility/capability.h
        src/server/utility/distribute.c
        src/server/utility/distribute.h
        src/server/utility/fciconv.c
        src/server/utility/fciconv.h
        src/server/utility/fcintl.c
        src/server/utility/fcintl.h
        src/server/utility/genlist.c
        src/server/utility/genlist.h
        src/server/utility/hash.c
        src/server/utility/hash.h
        src/server/utility/inputfile.c
        src/server/utility/inputfile.h
        src/server/utility/ioz.c
        src/server/utility/ioz.h
        src/server/utility/iterator.c
        src/server/utility/iterator.h
        src/server/utility/log.c
        src/server/utility/log.h
        src/server/utility/md5.c
        src/server/utility/md5.h
        src/server/utility/mem.c
        src/server/utility/mem.h
        src/server/utility/memory_file_cache.cpp
        src/server/utility/memory_file_cache.h
        src/server/utility/netintf.c
        src/server/utility/netintf.h
        src/server/utility/pqueue.c
        src/server/utility/pqueue.h
        src/server/utility/rand.c
        src/server/utility/rand.h
        src/server/utility/registry.c
        src/server/utility/registry.h
        src/server/utility/sbuffer.c
        src/server/utility/sbuffer.h
        src/server/utility/shared.c
        src/server/utility/shared.h
        src/server/utility/specenum_gen.h
        src/server/utility/speclist.h
        src/server/utility/specvec.h
        src/server/utility/string_vector.c
        src/server/utility/string_vector.h
        src/server/utility/support.c
        src/server/utility/support.h
        src/server/utility/timing.c
        src/server/utility/timing.h
        src/server/config.h)

# Link the target to the GTK+ libraries
# TARGET_LINK_LIBRARIES(civ_silver ${GTK3_LIBRARIES})